kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-backend
  labels:
    app: tic-tac-toe-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tic-tac-toe-backend
  template:
    metadata:
      labels:
        app: tic-tac-toe-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/danielchang2001/devsecops-webapp-backend:sha-2dde011118c8af4431245d58f6fcead31803badb
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: github-container-registry
